[package]
name = "solana-crate-features"
version = "0.19.0-pre0"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solana.com/"
license = "Apache-2.0"
edition = "2018"

[dependencies]
solana-ed25519-dalek = { version = "0.2.0", features = ["serde"] }
curve25519-dalek = { version = "1.1.3" }
failure = { version = "0.1.5" }
ureq = { version = "0.11.0", features = ["json"] }
bytes = { version = "0.4.12", features=["either"] }
either= { version = "1.5.3" }
serde = { version = "1.0.100", features=["rc"] }
cc = { version = "1.0.45", features=["jobserver", "num_cpus", "parallel"]}
libc = { version = "0.2.62", features=["extra_traits"] }
rand_chacha = { version = "0.1.1" }
lazy_static = { version = "1.4.0", features=["spin", "spin_no_std"] }
backtrace = { version = "0.3.33", features = ["serialize-serde"] }
winapi = { version = "0.3.8", features =["basetsd", "consoleapi", "errhandlingapi", "fileapi", "handleapi", "knownfolders", "libloaderapi", "memoryapi", "minwinbase", "minwindef", "ntdef", "ntsecapi", "ntstatus", "objbase", "processenv", "processthreadsapi", "profileapi", "shlobj", "std", "synchapi", "sysinfoapi", "timezoneapi", "utilapiset", "winbase", "wincon", "windef", "winerror", "winnls", "winnt", "winsock2", "winuser", "ws2def", "ws2ipdef", "ws2tcpip", "wtypesbase"] }
