[package]
name = "solana-sdk"
version = "0.19.0-pre0"
description = "Solana SDK"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solana.com/"
license = "Apache-2.0"
edition = "2018"

[features]
# On-chain program specific dependencies
program = []
# Dependencies that are not compatible or needed for on-chain programs
default = [
    "assert_matches",
    "byteorder",
    "chrono",
    "memmap",
    "rand",
    "rayon",
    "serde_json",
    "solana-ed25519-dalek",
    "curve25519-dalek",
    "failure",
    "backtrace",
    "winapi",
    "solana-logger",
    "bytes",
    "either",
    "lazy_static",
    "cc",
    "libc",
    "rand_chacha",
    "serde",
    "ureq",
    "untrusted"
]

[dependencies]
assert_matches = { version = "1.3.0", optional = true }
bincode = "1.1.4"
bs58 = "0.2.5"
byteorder = { version = "1.3.2", optional = true }
chrono = { version = "0.4.9", features = ["serde"], optional = true }
generic-array = { version = "0.13.2", default-features = false, features = ["serde", "more_lengths"] }
hex = "0.3.2"
itertools = { version = "0.8.0" }
log = { version = "0.4.8" }
memmap = { version = "0.6.2", optional = true }
num-derive = { version = "0.2" }
num-traits = { version = "0.2" }
rand = { version = "0.6.5", optional = true }
rayon = { version = "1.2.0", optional = true }
serde_derive = "1.0.100"
serde_json = { version = "1.0.40", optional = true }
sha2 = "0.8.0"
solana-ed25519-dalek = { version = "0.2.0", optional = true, features = ["serde"] }
curve25519-dalek = { version = "1.1.3", optional = true }
failure = { version = "0.1.5", optional = true }
ureq = { version = "0.11.0", features = ["json"], optional=true }
#aho-corasick = { version = "0.7.6", optional = true }
#ascii = { version = "0.9.3", optional = true }
bytes = { version = "0.4.12", optional = true, features=["either"] }
either= { version = "1.5.3", optional = true }
serde = { version = "1.0.100", optional = true, features=["rc"] }
cc = { version = "1.0.45", optional = true, features=["jobserver", "num_cpus", "parallel"]}
libc = { version = "0.2.62", optional = true, features=["extra_traits"] }
rand_chacha = { version = "0.1.1", optional = true }
lazy_static = { version = "1.4.0", optional = true, features=["spin", "spin_no_std"] }
backtrace = { version = "0.3.33", features = ["serialize-serde"], optional = true }
winapi = { version = "0.3.8", features =["basetsd", "consoleapi", "errhandlingapi", "fileapi", "handleapi", "knownfolders", "libloaderapi", "memoryapi", "minwinbase", "minwindef", "ntdef", "ntsecapi", "ntstatus", "objbase", "processenv", "processthreadsapi", "profileapi", "shlobj", "std", "synchapi", "sysinfoapi", "timezoneapi", "utilapiset", "winbase", "wincon", "windef", "winerror", "winnls", "winnt", "winsock2", "winuser", "ws2def", "ws2ipdef", "ws2tcpip", "wtypesbase"], optional = true }
solana-logger = { path = "../logger", version = "0.19.0-pre0", optional = true }
untrusted = { version = "0.7.0", optional = true }
